--- a/jersey-container-vertx/pom.xml
+++ b/jersey-container-vertx/pom.xml
@@ -1,11 +1,16 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>com.github.pyctam.jersey-container-vertx</groupId>
+        <artifactId>project</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.github.pyctam</groupId>
     <artifactId>jersey-container-vertx</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
     <name>jersey-container-vertx</name>
     <url>https://github.com/pyctam/jersey-container-vertx</url>
 
@@ -14,11 +19,10 @@
     </properties>
 
     <dependencies>
+        <!-- test dependencies -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
         </dependency>
     </dependencies>
 </project>
